--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,94 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+$sitBlueLight: #2b55a1;
+$sitBlueDark: #224583;
+$sitGreen: #79c92a;
+$sitWhite: #f4f4f4;
+
+.toolbar {
+    &-background-ios {
+        background: $sitBlueLight;
+    }
+    &-title-ios {
+        color: $sitWhite;
+    }
+    &-background-md {
+        background: $sitBlueLight;
+    }
+    &-title-md {
+        color: $sitWhite;
+    }
+}
+
+.button-inner {
+    color: $sitWhite;
+}
+
+.logo {
+    content: '';
+    width: 200px;
+    height: 90px;
+    background: url('../../assets/imgs/logo.png');
+    margin: 0 auto;
+}
+
+.content-default {
+    background-color: $sitBlueDark;
+    color: $sitWhite;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.help-text {
+    font-size: 12px;
+}
+
+.padding {
+    &-5 { padding: 5px };
+    &-10 { padding: 10px };
+    &-20 { padding: 20px };
+    &-30 { padding: 30px };
+    &-40 { padding: 40px };
+    &-50 { padding: 50px };
+
+    &-top-5 { padding-top: 5px };
+    &-top-10 { padding-top: 10px };
+    &-top-20 { padding-top: 20px };
+    &-top-30 { padding-top: 30px };
+    &-top-40 { padding-top: 40px };
+    &-top-50 { padding-top: 50px };
+
+    &-bottom-5 { padding-bottom: 5px };
+    &-bottom-10 { padding-bottom: 10px };
+    &-bottom-20 { padding-bottom: 20px };
+    &-bottom-30 { padding-bottom: 30px };
+    &-bottom-40 { padding-bottom: 40px };
+    &-bottom-50 { padding-bottom: 50px };
+}
+
+.margin {
+    &-5 { margin: 5px };
+    &-10 { margin: 10px };
+    &-20 { margin: 20px };
+    &-30 { margin: 30px };
+    &-40 { margin: 40px };
+    &-50 { margin: 50px };
+
+    &-top-5 { margin-top: 5px };
+    &-top-10 { margin-top: 10px };
+    &-top-20 { margin-top: 20px };
+    &-top-30 { margin-top: 30px };
+    &-top-40 { margin-top: 40px };
+    &-top-50 { margin-top: 50px };
+
+    &-bottom-5 { margin-bottom: 5px };
+    &-bottom-10 { margin-bottom: 10px };
+    &-bottom-20 { margin-bottom: 20px };
+    &-bottom-30 { margin-bottom: 30px };
+    &-bottom-40 { margin-bottom: 40px };
+    &-bottom-50 { margin-bottom: 50px };
+}
