--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -2,4 +2,12 @@ page-map {
     #map {
         height: 100%;
     }
+    .map-button {
+        position: absolute;
+        top: 90%;
+        transform: translateX(-50%);
+        &-div {
+            text-align: center;
+        }
+    }
 }
