(ALPHA 0.0.1) API and integration ok

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -90,7 +90,7 @@ $sitWhite: #f4f4f4;
     content: '';
     width: 200px;
     height: 90px;
-    background: url('../../assets/imgs/logo.png');
+    background: url('../assets/imgs/logo.png');
     margin: 0 auto;
     margin-top: 20px;
 }
